Fix menu layout issue

--- a/assets/css/fields.scss
+++ b/assets/css/fields.scss
@@ -184,15 +184,15 @@
 .menu-container {
   @apply relative;
 
-  .menu {
-    @apply absolute right-0 top-[calc(100%+0.25rem)];
-    @apply overflow-hidden min-w-[120px] max-h-[240px] overflow-y-auto py-1;
+  .dropdown-menu {
+    @apply absolute right-0 top-[calc(100%+0.25rem)] z-[20];
+    @apply overflow-hidden min-w-[120px] max-w-[560px] max-h-[240px] overflow-y-auto py-1;
     @apply bg-white shadow-md rounded-md focus:outline-none border border-line;
     @apply sm:text-xs md:text-sm;
   }
 
   .menu-item {
-    @apply w-full text-left px-4 py-2 cursor-pointer;
+    @apply w-full text-left px-4 py-2 cursor-pointer whitespace-nowrap;
   }
   .menu-itemActive {
     @apply bg-gray-lighter text-neutral;
